Format comment form avatar and content; fix white space under next video images

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -60,4 +60,11 @@
             outline: 0.125rem solid $outline-color-active;
         }
     }
+
+    &__list {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
