--- a/src/components/NextVideoCard/NextVideoCard.scss
+++ b/src/components/NextVideoCard/NextVideoCard.scss
@@ -9,13 +9,13 @@
     }
 
     // &__image-container {
-    // width: 6rem;
-    // height: 4rem;
+
     // }
 
     &__thumbnail {
         // width: 100%;
         // height: 100%;
+        display: block;
         width: 6.5rem;
         height: 4rem;
         object-fit: cover;
